# pianorhythm-docs

./: .dockerignore  .gitignore  .npmrc  2025-06-28-0.10.0.md  CLAUDE.md  LICENSE  alldocs.md  changelog.md  combine-docs.ps1  docs.Dockerfile  docusaurus.config.js  generate-algolia-records.js  package.json  pnpm-lock.yaml  sidebars.js  upload-algolia-records.js
.claude/: settings.local.json
.github/workflows/: algolia-index.yml  deploy-docs.yml
algolia-records/: records.json
blog/: authors.yml
blog/2023-05-02-welcome/: index.md
blog/2023-12-30/: index.md
blog/2025-06-28-back-from-hiatus/: index.md
blog/2026-04-27-back-from-hiatus/: index.md
bot/: .dockerignore  Cargo.toml  Dockerfile  build-and-push.cmd  rust-toolchain.toml
bot/src/: ai.rs  ai_actor.rs  main.rs
changelog/source/: 2022-12-07-0.7.91.md  2022-12-18-0.7.119.md  2022-12-20-0.7.123.md  2022-12-26-0.7.143.md  2022-12-26-0.7.146.md  2023-01-09-0.7.152.md  2023-03-13-0.7.222.md  2023-03-18-0.7.230.md  2023-05-04-0.8.0.md  2023-05-27-0.8.24.md  2023-06-17-0.8.26.md  2023-07-17-0.8.30.md  2023-09-05-0.8.39.md  2023-09-09-0.8.40.md  2023-09-10-0.8.41.md  2023-09-11-0.8.42.md  2023-09-12-0.8.43.md  2023-09-20-0.8.44.md  2023-09-23-0.8.45.md  2023-09-29-0.8.46.md  2023-12-31-0.9.0.md  2024-05-07-0.9.9.md  2026-04-22-0.9.10.md  versions.md
docker/: nginx-docs.conf  nginx.conf  nginx_old.conf
docs/community/: credits.mdx  discord.mdx  index.mdx
docs/development/: deployment-guide.md  development-setup.md  frontend-architecture.md  index.md  initialization-system.md
docs/faqs/: index.mdx
(+125 files in other folders)
